--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="loading">
+        <p>Loading...</p>
+    </div>
+
     <div class="scrollDown">
         <div class="content">
             <p>Welcome, scroll down to begin your journey</p>
@@ -25,7 +29,7 @@
             </div>
         </div>
 
-        <img id="playbackImg" src="/images/0001.png" alt="">
+        <img id="playbackImg" src="https://raw.githubusercontent.com/SimeDev42/Website/master/images/images/0001.png" alt="">
     </div>
     <script src="index.js"></script>
     <script src="video.js"></script>
